--- a/pomodoro.html
+++ b/pomodoro.html
@@ -8,6 +8,7 @@
     <title>Pomodoro Timer</title>
 </head>
 <body>
+    <p>teste</p>
     <section class="button">
         <div id="tempo"><h1 id="cont">25:00</h1></div>  
         <center><table cellspacing = 10px></center> 
